spigot support, use packet events, huskclaims, kingdoms, readme